Archive2/6c/39d2e81f0acfa6/output
+ clang++ -O3 -pedantic -Wall -Wextra -Wconversion -Wshadow -std=c++1y -pthread main.cpp
main.cpp:11:5: error: cannot initialize object parameter of type 'foo' with an expression of type 'foo'
    foo().bar1(); // doesn't compile because bar1() requires an lvalue
    ^~~~~
main.cpp:17:5: error: cannot initialize object parameter of type 'foo' with an expression of type 'foo'
    f.bar2();     // doesn't compile because bar2() requires an rvalue
    ^
2 errors generated.
